<resources>
    <string name="app_name">HotelsApp</string>

    //main~login page
    <string name="welcome">WanderWell\nHotels\n\nWelcome!</string>
    <string name="signup">SignUp</string>
    <string name="login">LOGIN</string>

    //register page
    <string name="registerTitle">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>

    //search page
    <string name="WanderWell_title">WanderWell\nHotels</string>
    <string name="dest">Destination</string>
    <string name="dates">Dates</string>
    <string name="adults">Adults</string>
    <string name="rooms">Rooms</string>
    <string name="checkIn">CheckIN</string>
    <string name="checkOut">Check Out</string>
    <string name="find_me_hotels">Find Me Hotels</string>
    <string name="my_favorite">My Favorite</string>


    <string name="flyWithMe">Fly With Me</string>

    //hotels page
    <string name="sort_by">Sort By:</string>
    <string name="popularity">Popularity</string>
    <string name="price">Price</string>
    <string name="distanceFromCenter">Distance From Center</string>
    <string name="search">Search</string>
    <string name="SecondTitle">Discover, Book, and Explore Your Perfect Hotel Experience</string>
    <string name="hotels_not_found">No matches were found for the specific details :(</string>
    <string name="favorite_not_found">You haven\'t selected your favorite hotels yet</string>
    <string name="search_hotels_available">No Hotels available</string>
    <string name="default_not_found">There are no hotels available</string>
    <string name="hotels_message">Show hotels in: \n</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>