<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SearchActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/search_IMG_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:scaleType="centerCrop"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:text="@string/WanderWell_title"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="350dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_LAY_dest"
                style="@style/MyOutLineBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:layout_gravity="center"
                android:hint="@string/dest"
                android:padding="5dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:endIconDrawable="@drawable/main_search"
                app:endIconMode="custom"
                app:endIconTint="@color/black"
                app:errorEnabled="true"
                app:hintTextColor="@color/black"
                app:startIconContentDescription="@string/dest">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_EDT_dest"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_LAY_checkIn"
                style="@style/MyOutLineBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:layout_gravity="center"
                android:hint="@string/checkIn"
                android:padding="5dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:endIconDrawable="@drawable/calendar"
                app:endIconMode="custom"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconContentDescription="@string/checkIn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_EDT_checkIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:textColorPrimary="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_LAY_checkOut"
                style="@style/MyOutLineBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:layout_gravity="center"
                android:hint="@string/checkOut"
                android:padding="5dp"
                android:textColorPrimary="@color/black"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:endIconDrawable="@drawable/calendar"
                app:endIconMode="custom"
                app:endIconTint="@color/black"
                app:errorEnabled="true"
                app:hintTextColor="@color/black"
                app:startIconContentDescription="@string/checkOut">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_EDT_checkOut"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:textColorPrimary="@color/shani" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyOutLineBoxDropDown"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:hint="@string/rooms"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:endIconTint="@color/shani"
                    app:hintTextColor="@color/shani">

                    <AutoCompleteTextView
                        android:id="@+id/search_PICK_room"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyOutLineBoxDropDown"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:hint="@string/adults"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:endIconTint="@color/shani"
                    app:hintTextColor="@color/shani">

                    <AutoCompleteTextView
                        android:id="@+id/search_PICK_adults"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_BTN_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.1"
                android:backgroundTint="@color/shani"
                android:text="@string/find_me_hotels"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_BTN_favorite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="0.5dp"
                android:padding="20dp"
                android:elevation="4dp"
                android:text="My Favorite"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:backgroundTint="#F1BB6C"
                android:drawableTop="@drawable/baseline_favorite_border_24"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_BTN_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="0.5dp"
                android:padding="20dp"
                android:elevation="4dp"
                android:text="New Search"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:backgroundTint="#F1BB6C"
                android:drawableTop="@drawable/baseline_autorenew_24"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_BTN_logout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="0.5dp"
                android:padding="20dp"
                android:elevation="4dp"
                android:text="Logout"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:backgroundTint="#F1BB6C"
                android:drawableTop="@drawable/ic_baseline_logout_24"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>