<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/main_IMG_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/img_pattern_small"
        android:alpha="0.2"
        android:scaleType="centerCrop"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:padding="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:text="@string/fly_with_me_title"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_weight="4"
            android:layout_margin="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_LAY_dest"
                style="@style/MyOutLineBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:hint="@string/dest"
                android:padding="5dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:endIconDrawable="@drawable/main_search"
                app:endIconMode="custom"
                app:endIconTint="#FF9800"
                app:hintTextColor="#FF9800"
                app:errorEnabled="true"
                app:startIconContentDescription="@string/dest">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_EDT_dest"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_LAY_checkIn"
                style="@style/MyOutLineBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:hint="@string/checkIn"
                android:padding="5dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:endIconDrawable="@drawable/calendar"
                app:endIconMode="custom"
                app:endIconTint="#FF9800"
                app:hintTextColor="#FF9800"
                app:startIconContentDescription="@string/checkIn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_EDT_checkIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true"
                    android:cursorVisible="false"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_LAY_checkOut"
                style="@style/MyOutLineBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:hint="@string/checkOut"
                android:padding="5dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:endIconDrawable="@drawable/calendar"
                app:endIconMode="custom"
                app:endIconTint="#FF9800"
                app:hintTextColor="#FF9800"
                app:errorEnabled="true"
                app:startIconContentDescription="@string/checkOut">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_EDT_checkOut"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true"
                    android:cursorVisible="false"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"

                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyOutLineBoxDropDown"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"

                    android:layout_weight="1"
                    android:hint="@string/adults"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:endIconTint="#FF9800"
                    app:hintTextColor="#FF9800">

                    <AutoCompleteTextView
                        android:id="@+id/search_PICK_adults"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyOutLineBoxDropDown"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:hint="@string/kids"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:endIconTint="#FF9800"
                    app:hintTextColor="#FF9800">

                    <AutoCompleteTextView
                        android:id="@+id/search_PICK_kids"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_BTN_find"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:backgroundTint="#FFC107"
                android:text="@string/find_me_hotels"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="25dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_BTN_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#20C0C3DD"
                android:drawableEnd="@drawable/search"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_BTN_favorite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#20C0C3DD"
                android:drawableEnd="@drawable/heart"
                android:scaleType="fitStart"
                android:text="My Favorite"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>